infrastructure/sonarqube/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: sonarqube-api
  namespace: sonarqube
spec:
  parentRefs:
    - name: main-gateway
      namespace: kube-system
  hostnames:
    - "sonarqube.k8s.benrachmiel.org"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api/
        - path:
            type: PathPrefix
            value: /batch/
      filters:
        - type: RequestHeaderModifier
          requestHeaderModifier:
            remove:
              - X-Forwarded-User
              - X-Forwarded-Email
              - X-Forwarded-Groups
              - X-Forwarded-Preferred-Username
      backendRefs:
        - name: sonarqube-sonarqube
          port: 9000
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: sonarqube-ui
  namespace: sonarqube
spec:
  parentRefs:
    - name: main-gateway
      namespace: kube-system
  hostnames:
    - "sonarqube.k8s.benrachmiel.org"
  rules:
    - backendRefs:
        - name: oauth2-proxy
          port: 4180
